--- a/GregorDouglas/Contact.html
+++ b/GregorDouglas/Contact.html
@@ -57,8 +57,8 @@ function MM_swapImage() { //v3.0
 <table width="1200" border="1">
   <tbody>
     <tr>
-      <td width="539">&nbsp;<img src="Images/House.png" width="652" height="415" alt=""/></td>
-      <td width="645">Gregoryies home adress is 115 West Bawtry Road </td>
+      <td width="539">&nbsp;<img src="" width="652" height="415" alt=""/></td>
+      <td width="645">Gregoryies home adress </td>
     </tr>
   </tbody>
 </table>
